--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -25,3 +25,7 @@ changelog:
       - "^test:"
 env_files:
   github_token: ./github_token
+gitlab_urls:
+  api: http://<host>/api/v4
+  download: http://<host>
+  skip_tls_verify: true
